GNOME Bugzilla – Bug 679535
Compilation with debug disabled fails...
Last modified: 2012-07-07 12:40:30 UTC
If I configure using --disable-gst-debug and try to compile I get this compilation error: gstinfo.c:1822:1: error: conflicting types for ‘gst_debug_add_log_function’ In file included from gst_private.h:46:0, from gstinfo.c:90: gstinfo.h:332:6: note: previous declaration of ‘gst_debug_add_log_function’ was here make[3]: *** [libgstreamer_1.0_la-gstinfo.lo] Error 1 The reason being that this commit fails to take disabled debug into account: http://cgit.freedesktop.org/gstreamer/gstreamer/commit/?id=7da1d23a9b25213e70cc28ea080e8cce16f9ede8 The attached trivial patch fixes this problem.
Created attachment 218206 [details] [review] Patch fixing compilation error.
Thanks! commit 73ab9d17e376ef276e286883631051e33dd3458b Author: Sebastian Rasmussen <sebrn@axis.com> Date: Sat Jul 7 01:37:50 2012 +0200 gstinfo: Add destroy notify arguments to debug stubs Fixes https://bugzilla.gnome.org/show_bug.cgi?id=679535