gstinfo: Add destroy notify arguments to debug stubs

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=679535